--- a/templates/success.html
+++ b/templates/success.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Success</title>
          <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
        <link rel="icon" type="image/x-icon" href="/static/wifi.png">
