voucher and client db

--- a/templates/buy.html
+++ b/templates/buy.html
@@ -199,7 +199,7 @@
 </body>
 <footer>
     <p><span>
-        © 2025 Fid_Dawg,&nbsp;Inc.
+        © 2025 Fid_Dawg.All Rights Reserved.
       </span></p>
 </footer>
 </html>
