--- a/static/style.css
+++ b/static/style.css
@@ -140,7 +140,7 @@ button[type="submit"]:hover {
 
 footer {
     text-align: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     display: flex;
