--- a/templates/buy.html
+++ b/templates/buy.html
@@ -61,6 +61,8 @@
             <input type="text" id="receipt_number" name="receipt_number" placeholder="Voucher Code" required>
             <button type="submit" id="loginButton">Login</button>
         </form>
+                <p id="voucherMessage" style="color: red;"></p>
+
     </div>
 
 <script>
